Added tags for favicon.

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -51,6 +51,8 @@
         text-align: right;
       }
     </style>
+    <link rel="shortcut icon" href="/images/favicon.ico" />
+    <link rel="icon" href="/blog/setomits/images/favicon.ico" type="image/vnd.microsoft.icon" />
     {% ifequal device "mobile" %}
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport"
