--- a/templates/_base.html
+++ b/templates/_base.html
@@ -52,7 +52,7 @@
       }
     </style>
     <link rel="shortcut icon" href="/images/favicon.ico" />
-    <link rel="icon" href="/blog/setomits/images/favicon.ico" type="image/vnd.microsoft.icon" />
+    <link rel="icon" href="/images/favicon.ico" type="image/vnd.microsoft.icon" />
     {% ifequal device "mobile" %}
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport"
